--- a/43.10/OB/OB2WA/index.html
+++ b/43.10/OB/OB2WA/index.html
@@ -1,6 +1,1 @@
-<!DOCTYPE html>
-<html>
-{'ver1':'33', 'ver2':'0', 'ver3':'\n????? ????\n\n??????? ??? 31\n????? ??????? ?? ???????? ?????????\n????? ????? ??????? ?????? ??? ???? ??? ?? ?????? \n' , 'dli':'https://bit.ly/OBWhatsApp_v31'}
-
-
-</html>
+{'ver1':'44', 'ver2':'00', 'ver3':'\nتحديث جديد \n\nالإصدار رقم 44\nأهم مميزات التحديث: \n\n#  تفعيل ميزة البحث عن الرسائل داخل المحادثة حسب التاريخ والوقت. \n #  إضافة خيار الرجوع الى الواجهة الرئيسية القديمة (طلب من المتابعين).  \n #  تفعيل إرسال مقطع صوتي للإستماع لمرة واحدة. \n # تفعيل خيار التأكيد قبل إرسال صورة أو فيديو الى الحاله. \n #  إضافة الفيسات الجديدة. \n #  إضافة طريقة جديد لعرض وتطبيق الخطوط. \n # دعم الترجمة بطريقتين. \n #  إضافة إمكانية الاتصال بحسابات بزنس عبر مكالمة هاتفية. \n #  إصلاح إخفاء صحين القراءة. \n #  إصلاح إخفاء أنك شاهدت الحالة عند تفعيل وضع الشبح. \n #  إصلاح عدم فتح المحادثات المخفية في بعض الأشكال. \n #  إصلاح بعض خيارات الألوان التي لا تعمل. \n #  العديد من المميزات و الاضافات والإصلاحات الاخرى. \n ' , 'dli':'https://bit.ly/OB2WhatsApp-v44'}
